# janus-gateway-audioroom

./: .travis.yml  Makefile.am  README.md  Vagrantfile  get-janus-headers.sh  libjanus_audioroom.c
conf/: janus.plugin.cm.audioroom.cfg.sample
test/: README.md  tester.py
